feat(brew): Split brew into brewing steps